--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -207,12 +207,6 @@ body
 	font-size: 12px
 // cookie === end
 
-// edit items
-
-.dib
-	display inline-block
-
-// edit items === end
 
 // slider menu
 .head-toggle
@@ -257,5 +251,6 @@ body
 
 .slide-block-wrap
 	padding: 24px
+
 // slider menu === end
 
